tratando de guardar

--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the Rooms controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.pantalla {
+    width: 100%;
+    background: #5cb85c;
+    height: 20px;
+    text-align: center;
+    color: #fff;
+    border-radius: 0px 0px 15px 15px;
+    margin-bottom: 10px;
+}
